Added Login Register to views

--- a/src/Codecool.CodecoolShop/Codecool.CodecoolShop.csproj
+++ b/src/Codecool.CodecoolShop/Codecool.CodecoolShop.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\LoginSignUp\" />
+  </ItemGroup>
+
 </Project>
