Database implemented, main page load products from database

--- a/src/Codecool.CodecoolShop/appsettings.json
+++ b/src/Codecool.CodecoolShop/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "CodecoolShop": "Server=(LocalDb)\\MSSQLLocalDB;Database=Codecool_shop;Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
