--- a/src/Codecool.CodecoolShop/appsettings.json
+++ b/src/Codecool.CodecoolShop/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "CodecoolShop": "Server=(LocalDb)\\MSSQLLocalDB;Database=Codecool_shop;Integrated Security=true"
+    "CodecoolShop": "Server=(LocalDb)\\MSSQLLocalDB;Database=Codecool_shop;Integrated Security=true",
+    "CodecoolCodecoolShopContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Codecool.CodecoolShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
