--- a/src/Codecool.CodecoolShop/appsettings.json
+++ b/src/Codecool.CodecoolShop/appsettings.json
@@ -12,7 +12,8 @@
   },
   "ConnectionStrings": {
     "CodecoolShop": "Server=(LocalDb)\\MSSQLLocalDB;Database=Codecool_shop;Integrated Security=true",
-    "CodecoolCodecoolShopContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Codecool.CodecoolShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CodecoolCodecoolShopContextConnection":
+      "Server=(localdb)\\mssqllocaldb;Database=Codecool.CodecoolShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
